[gd_scene load_steps=4 format=3 uid="uid://f8w01wpjt8nm"]

[ext_resource type="Script" path="res://map/map_object.gd" id="1_y3whx"]

[sub_resource type="BoxMesh" id="BoxMesh_5t1ai"]

[sub_resource type="BoxShape3D" id="BoxShape3D_b1skf"]

[node name="BulletinBoard" type="Node3D"]
script = ExtResource( "1_y3whx" )
object_type = 35
interaction_behaviour = 20
resource_id = 50

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 0.75, 0)
mesh = SubResource( "BoxMesh_5t1ai" )

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.5, 0, 0, 0, 0.1, 0, 0.25, 0.45)
mesh = SubResource( "BoxMesh_5t1ai" )

[node name="MeshInstance3D3" type="MeshInstance3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.5, 0, 0, 0, 0.1, 0, 0.25, -0.45)
mesh = SubResource( "BoxMesh_5t1ai" )

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource( "BoxShape3D_b1skf" )
