[gd_scene load_steps=4 format=3 uid="uid://k6rgao7lgpo2"]

[ext_resource type="Script" path="res://map/map_object.gd" id="1_f37o0"]

[sub_resource type="BoxMesh" id="BoxMesh_iyw2p"]

[sub_resource type="BoxShape3D" id="BoxShape3D_kiig1"]

[node name="SmallGeneric" type="Node3D"]
script = ExtResource( "1_f37o0" )
object_type = 35
resource_id = 60

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource( "BoxMesh_iyw2p" )

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource( "BoxShape3D_kiig1" )
