[gd_scene load_steps=5 format=3 uid="uid://cc6gnlx7oo2v5"]

[ext_resource type="Script" path="res://map/map_object.gd" id="1_2prke"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s031p"]
albedo_color = Color(0.470588, 0.403922, 0.254902, 1)

[sub_resource type="BoxMesh" id="BoxMesh_0gbw3"]
material = SubResource( "StandardMaterial3D_s031p" )

[sub_resource type="BoxShape3D" id="BoxShape3D_wcteu"]

[node name="FarmDirtPatch" type="Node3D"]
script = ExtResource( "1_2prke" )
object_type = 35
interaction_behaviour = 15
resource_id = 40

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, -0.15, 0)
mesh = SubResource( "BoxMesh_0gbw3" )

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, -0.15, 0)
shape = SubResource( "BoxShape3D_wcteu" )
